version 0.2 Alignment-Correction

--- a/style.css
+++ b/style.css
@@ -84,7 +84,13 @@ body{
 }
 .motivation{
     font-weight: 500;
-    margin: 60px 210px;
-    /* justify-self: center;
-    align-self: center; */
+    margin: 60px 0px;
+    text-align: center;
+}
+.footer{
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 15px;
+    text-align: center;
+    
 }
